--- a/index.html
+++ b/index.html
@@ -1,79 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Netflix Homepage Clone</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Netflix</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">TV Shows</a></li>
-        <li><a href="#">Movies</a></li>
-        <li><a href="#">New & Popular</a></li>
-        <li><a href="#">My List</a></li>
-      </ul>
-    </nav>
-    <div class="logo">
-      <img src="https://www.freepnglogos.com/uploads/netflix-logo-0.png" alt="Netflix Logo">
-    </div>
-    <div class="search">
-      <input type="text" placeholder="Search">
-    </div>
-    <div class="profile">
-      <img src="https://www.pngkey.com/png/full/114-1149878_setting-user-avatar-in-specific-size-without-breaking.png" alt="Profile Picture">
-    </div>
-  </header>
-  <main>
-    <section class="hero">
-      <h1>Unlimited movies, TV shows, and more.</h1>
-      <p>Watch anywhere. Cancel anytime.</p>
-      <button>Try 30 Days Free</button>
+    <header class="showcase">
+        <div class="showcase-top">
+            <img src="logo.png" alt="Netflix Logo">
+            <a href="#" class="btn btn-rounded">Sign In</a>
+        </div>
+        <div class="showcase-content">
+            <h1>Unlimited movies, TV shows and more.</h1>
+            <h3>All of Netflix, starting at just ₹ 199.</h3>
+            <p>Ready to watch? Enter your email to create or restart your membership.</p>
+            <input type="email" name="email" id="mail" placeholder="Email address">
+            <a href="#" class="btn btn-lg">GET STARTED ></a>
+        </div>
+    </header>
+
+    <section class="style-cards">
+        <div class="card-0">
+            <img src="2.jpg" alt="Netflix Mobile">
+            <div class="desc-0">
+                <h1>Create profiles for kids.</h1>
+                <h3>Send kids on adventures with their favourite characters in a space made just for them—free with your membership.</h3>
+            </div>
+        </div>
+        <div class="card-1">
+            <div class="desc-1">
+                <h1>Enjoy on your TV.</h1>
+                <h3>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</h3>
+            </div>
+            <img src="tv.png" alt="Netflix TV">
+            <video class="video-1" autoplay="" playsinline="" muted="" loop=""><source src="1.m4v" type="video/mp4"></video>
+        </div>
+        <div class="card-2">
+            <img src="3.jpg" alt="Netflix Mobile">
+            <div class="desc-2">
+                <h1>Download your shows to watch offline.</h1>
+                <h3>Save your favourites easily and always have something to watch.</h3>
+            </div>
+        </div>
+        <div class="card-3">
+            <div class="desc-3">
+                <h1>Watch everywhere.</h1>
+                <h3>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h3>
+            </div>
+            <img src="4.png" alt="Device-Pile-In">
+            <video class="video-2" autoplay="" playsinline="" muted="" loop=""><source src="2.m4v" type="video/mp4"></video>
+        </div>
     </section>
-    <section class="categories">
-      <h2>Browse by Category</h2>
-      <div class="category">
-        <img src="https://www.pngkey.com/png/full/349-3499617_tv-shows-png-tv-shows-logo-png.png" alt="TV Shows">
-        <h3>TV Shows</h3>
-      </div>
-      <div class="category">
-        <img src="https://www.pngkey.com/png/full/349-3499617_tv-shows-png-tv-shows-logo-png.png" alt="Movies">
-        <h3>Movies</h3>
-      </div>
-      <div class="category">
-        <img src="https://www.pngkey.com/png/full/349-3499617_tv-shows-png-tv-shows-logo-png.png" alt="New & Popular">
-        <h3>New & Popular</h3>
-      </div>
-      <div class="category">
-        <img src="https://www.pngkey.com/png/full/349-3499617_tv-shows-png-tv-shows-logo-png.png" alt="My List">
-        <h3>My List</h3>
-      </div>
+
+    <section class="lastsec">
+        <div class="faq">
+            <h1>Frequently Asked Questions</h1>
+            <ul class="questions">
+                <li>What is Netflix?</li>
+                <li>How much does Netflix cost?</li>
+                <li>Where can I watch?</li>
+                <li>How do I cancel?</li>
+                <li>What can I watch on Netflix?</li>
+                <li>Is Netflix good for kids?</li>
+            </ul>
+            <p>Ready to watch? Enter your email to create or restart your membership.</p>
+            <div class="input">
+                <input type="email" name="email" placeholder="Email Address">
+                <a href="#" class="btn-rounded"><button>GET STARTED ></button></a>
+            </div>
+        </div>
     </section>
-    <section class="preview">
-      <h2>Preview</h2>
-      <div class="preview-item">
-        <img src="https://www.pngkey.com/png/full/349-3499617_tv-shows-png-tv-shows-logo-png.png" alt="Preview Item">
-        <h3>Preview Item</h3>
-      </div>
-      <div class="preview-item">
-        <img src="https://www.pngkey.com/png/full/349-3499617_tv-shows-png-tv-shows-logo-png.png" alt="Preview Item">
-        <h3>Preview Item</h3>
-      </div>
-      <div class="preview-item">
-        <img src="https://www.pngkey.com/png/full/349-3499617_tv-shows-png-tv-shows-logo-png.png" alt="Preview Item">
-        <h3>Preview Item</h3>
-      </div>
-      <div class="preview-item">
-        <img src="https://www.pngkey.com/png/full/349-3499617_tv-shows-png-tv-shows-logo-png.png" alt="Preview Item">
-        <h3>Preview Item</h3>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2023 Netflix Clone</p>
-  </footer>
+
+
+    <footer class="footer">
+        <p>Questions? Call 000-800-040-1843</p>
+        <div class="footer-cols">
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Investor Relations</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Speed Test</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Help Centre</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Cookie Preferences</a></li>
+                <li><a href="#">Watch for Free</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Ways to Watch</a></li>
+                <li><a href="#">Corporate Information</a></li>
+                <li><a href="#">Legal Notices</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Media Centre</a></li>
+                <li><a href="#">Terms of Use</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Netflix Originals</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
